<resources>
    <string name="app_name">서울시위</string>
    <string name="activity_name">서울시위</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_description">서울집회 정보 앱</string>
    <string name="about_seoulsiwi">서울시위란?</string>
    <string name="about_demo">집회시위 관련정보</string>
    <string name="promotion_demo">집회시위 홍보하기</string>
    <string name="setting">설정</string>
    <string name="order_by_recent">등록순</string>
    <string name="order_by_bit">인기순</string>
    <string name="order_by_comment">댓글순</string>
    <string name="line_two">2018.7.20\n오후 7시</string>

    <string name="realtime_map">실시간 지도</string>
    <string name="demo_location_map">등록 집회 위치</string>
    <string name="word_around">주변</string>

    <string name="test">아시아나 항공 \n4차 집회</string>
    <string name="description_seoulsiwi_title">‘서울시위(WE)’ 란?</string>
    <string name="description_seoulsiwi">서울시내 집회/시위 관련 정보를 제공하는 앱입니다.\n 실시간으로 집회/시위로 인한 교통통제 여부를 파악할 수 있으며, 직접 집회/시위 정보를 업로드하여 시민들의 참여를 독려할 수 있습니다. \'서울시위(WE)\'라는앱 이름은 서울시내 집회/시위에서 제기되는 문제들이결국 \'우리(WE)\' 모두의 문제이며 함께 해결해나가야한다는 것을 의미합니다.</string>
    <string name="enrol_demo">집회시위 등록</string>
    <string name="description_enrol_demo"> ‘서울시위(WE)’ 앱을 통해 진행 예정인 집회시위를 등록하여 홍보 하실 수 있습니다. 아래 내용을 작성하여 ‘보내기’를눌러주세요.</string>
    <string name="description_enrol_demo_must_input_cert"> “신고 접수증을 첨부” 하셔야만 등록이 가능합니다.</string>
    <string name="word_title">제목</string>
    <string name="word_aim">목적</string>
    <string name="word_date">일시</string>
    <string name="word_location">장소</string>
    <string name="word_promoter">주최자</string>
    <string name="word_enrol_picture">사진등록</string>
    <string name="word_cert">접수증</string>
    <string name="word_send">보내기</string>
    <string name="word_select">선택</string>
    <string name="team_name">시민의 목소리</string>
    <string name="demo_list">대규모 집회 리스트</string>

    <string name="word_today">오늘</string>
    <string name="word_yesterday">어제</string>
    <string name="format_date">%d년 %d월 %d일</string>
    <string name="format_date_for_banner_activity">%d년 %d월 %d일 집회</string>
    <string name="time_format_end_hour">%d년 %d월 %d일 %d시</string>
    <string name="enrol_demo_time_format">%d년 %d월 %d일 %d시 - %d시</string>
    <string name="feed_list_time_format">%d.%d.%d\n%s %d시</string>

    <string name="how_to_report">신고 방법</string>
    <string name="demo_notice">유의 사항</string>
    <string name="demo_rule">준수 사항</string>

    <string name="how_to_report_data">
옥외집회 또는 시위의 주최자는 그 집회나 사위를 시작하기 720시간 전부터 48시간 전에 관할 경찰서장 또는 지방경찰청장에게 옥외집회(시위·행진)신고서를 제출해야 합니다.\n\n
◇ 신고기간\n
☞ 옥외집회 또는 시위를 주최하려는 사람은 그 집회 또는 시위에 관한 목적, 일시, 장소, 참가 예정인 단체와 인원 등을 적은 옥외집회(시위·행진)신고서를 옥외집회 또는 시위를 시작하기 720시간 전부터 48시간 전에 관할 경찰서 또는 지방경찰청에 제출해야 합니다.\n
☞ 다만, 주관자, 참가 예정 단체 등이 둘 이상이거나 질서유지인을 두는 경우에는 이 신고서에 (주최자·주관자·주최단체의 대표자·질서유지인·참가 예정 단체)명단을 첨부해서 제출해야 합니다.\n
\n
◇신고기관\n
☞ 옥외집회 또는 시위의 신고는 관할 경찰서에 하면 되는데, 다만 옥외집회 또는 시위 장소가 두 곳 이상의 경찰서의 관할에 속하는 경우에는 관할 지방경찰청에 제출해야 하고, 두 곳 이상 지방경찰청의 관할에 속하는 경우에는 주최지를 관할하는 지방경찰청에 제출해야 합니다.\n
\n
◇ 위반 시 제재\n
☞ 이를 위반해서 ① 옥외집회 또는 시위의 신고를 하지 않으면 2년 이하의 징역 또는 200만원 이하의 벌금에 처해지며, ② 옥외집회 또는 시위의 신고를 거짓으로 하고 옥외집회 또는 시위를 개최하면 6개월 이하의 징역 또는 50만원 이하의 벌금·구류 또는 과료에 처해집니다.\n
    </string>

    <string name="demo_notice_data">
다음 목적, 시간, 장소의 경우 집회시위가 제한됩니다.\n
\n
◇ 집회 또는 시위의 목적\n
누구든지 다음 어느 하나에 해당하는 집회 또는 시위를 주최해서는 안 됩니다.\n
1. 헌법재판소의 결정에 따라 해산된 정당의 목적을 달성하기 위한 집회 또는 시위\n
2. 집단적인 폭행, 협박, 손괴(損壞), 방화(放火) 등으로 공공의 안녕질서에 직접적인 위협을 끼칠 것이 명백한 집회 또는 시위\n
\n
\n
◇ 옥외집회 또는 시위의 금지 시간\n
누구든지 해가 뜨기 전이나 해가 진 후에는 옥외집회(천장이 없거나 사방이 폐쇄되지 않은 장소에서 여는 집회) 또는 시위를 해서는 안 됩니다.\n
다만, 집회의 성격상 부득이해서 주최자가 질서유지인을 두고 미리 옥외집회를 해야 하는 사유를 적어 신고한 경우에는 관할 경찰서장 또는 지방경찰청장은 질서 유지를 위한 조건을 붙여 해가 뜨기 전이나 해가 진 후에도 옥외집회를 허용할 수 있습니다.\n
\n
◇ 옥외집회 또는 시위의 금지 장소\n
누구든지 다음 어느 하나에 해당하는 청사 또는 저택의 경계 지점으로부터 100미터 이내의 장소에서는 옥외집회 또는 시위를 해서는 안 됩니다.\n
1. 국회의사당, 각급 법원, 헌법재판소\n
2. 대통령 관저(官邸), 국회의장 공관(公館), 대법원장 공관, 헌법재판소장 공관\n
3. 국무총리 공관(행진하는 경우는 제외)\n
4. 국내 주재 외국의 외교기관이나 외교사절의 숙소.\n
\n
다만, 다음 어느 하나에 해당하는 경우로서 외교기관 또는 외교사절 숙소의 기능이나 안녕을 침해할 우려가 없다고 인정되는 경우에는 옥외집회 또는 시위를 할 수 있습니다.\n
가. 해당 외교기관 또는 외교사절의 숙소를 대상으로 하지 않는 경우\n
나. 대규모 집회 또는 시위로 확산될 우려가 없는 경우\n
다. 외교기관의 업무가 없는 휴일에 개최하는 경우\n
    </string>

    <string name="demo_rule_data">
집회 또는 시위의 참가자는 집회 또는 시위를 방해하거나 총포 등의 휴대 및 폭행 등을 해서는 안 되며, 해산명령이 내려지면 지체 없이 해산해야 합니다. 또한, 집회(시위)에서 화염병 등을 사용하거나 다른 사람을 추행해서는 안 되며, 집회(시위)에서 국기를 사용한 경우 국기가 함부로 버려지지 않도록 관리해야 하며, 국기가 훼손된 경우에는 이를 지체 없이 소각 등 적절한 방법으로 폐기해야 합니다.\n
\n
◇ 집회 또는 시위에 대한 방해 금지\n
☞ 누구든지 폭행, 협박이나 그 밖의 방법으로 평화적인 집회 또는 시위를 방해하거나 질서를 문란하게 해서는 안 되며, 집회 또는 시위의 주최자나 질서유지인의 「집회 및 시위에 관한 법률」에 따른 임무 수행을 방해해서는 안 됩니다.\n
\n
◇ 총포 등의 휴대 및 폭행 등 금지\n
☞ 집회 또는 시위에 참가하는 사람은 다음 어느 하나에 해당하는 행위를 해서는 안 됩니다.\n
1. 총포, 폭발물, 도검, 철봉, 곤봉, 돌덩이 등 다른 사람의 생명을 위협하거나 신체에 해를 끼칠 수 있는 기구를 휴대하거나 사용하는 행위 또는 다른 사람에게 이를 휴대하게 하거나 사용하게 하는 행위\n
2. 폭행, 협박, 손괴, 방화 등으로 질서를 문란하게 하는 행위\n
\n
◇ 화염병 사용 등 금지\n
☞ 화염병을 사용해서 사람의 생명·신체 또는 재산을 위험에 빠뜨리면 5년 이하의 징역 또는 500만원 이하의 벌금에 처해지며, 그 미수범도 처벌됩니다.\n
\n
◇화염병 등 제조·보관·운반 및 소지 금지\n
☞ 화염병을 제조·보관·운반·소지하거나 화염병의 제조에 쓸 목적으로 유리병이나 그 밖의 용기에 휘발유·등유나 그 밖에 불붙기 쉬운 물질을 넣은 물건으로서 이에 발화장치나 점화장치를 하면 화염병이 되는 것을 보관·운반·소지하면 3년 이하의 징역 또는 300만원 이하의 벌금에 처해집니다.\n
☞ 화염병의 제조에 쓸 목적으로 화염병을 사용할 위험이 있는 장소에서 그 제조에 사용되는 물건 또는 물질을 보관·운반·소지하면 1년 이하의 징역 또는 100만원 이하의 벌금에 처해집니다.\n
\n
◇ 해산명령에 따른 해산 의무\n
☞ 집회 또는 시위에 대해 해산명령을 받은 경우 모든 참가자는 지체 없이 해산해야 합니다.\n
\n
◇ 집회장소에서의 추행 금지\n
☞ 집회장소나 그 밖에 공중이 밀집하는 장소에서 사람을 추행하면 1년 이하의 징역 또는 300만원 이하의 벌금에 처해집니다.\n
\n
◇ 국기(國旗)의 올바른 관리 및 사용\n
☞ 여러 사람이 모이는 집회 등 각종 행사에서 수기(手旗)를 사용하는 경우 행사를 주최하는 사람은 국기가 함부로 버려지지 않도록 관리해야 하며, 국기가 훼손된 경우에는 이를 지체 없이 소각 등 적절한 방법으로 폐기해야 합니다.\n

    </string>
</resources>
