<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="appcontest.seoulsi_we.activity.EnrolMyDemoActivity">

    <include
        layout="@layout/toolbar_navigation_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description_enrol_demo"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/description_enrol_demo_must_input_cert"
                    android:textColor="#ff4949"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/enrol_demo_border_normal"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:background="#f8f8f8"
                        android:divider="@drawable/enrol_demo_list_divider"
                        android:dividerPadding="1dp"
                        android:orientation="vertical"
                        android:showDividers="middle">

                        <TextView
                            android:id="@+id/enrol_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="onClicked"
                            android:padding="15dp"
                            android:text="@string/word_date"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#757778" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:id="@+id/enrol_location_container"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <include
                                    android:id="@+id/first_location_view"
                                    layout="@layout/enrol_place_view"
                                    android:onClick="onClicked" />

                            </LinearLayout>

                            <ImageView
                                android:id="@+id/enrol_demo_add_place_button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:onClick="onClicked"
                                android:padding="5dp"
                                android:src="@drawable/ic_add" />

                        </LinearLayout>

                        <EditText
                            android:id="@+id/enrol_promoter"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/word_promoter"
                            android:maxLength="10"
                            android:maxLines="1"
                            android:padding="15dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#757778" />

                    </LinearLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/enrol_demo_border_normal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:background="#f8f8f8"
                        android:divider="@drawable/enrol_demo_list_divider"
                        android:dividerPadding="1dp"
                        android:orientation="vertical"
                        android:showDividers="middle">

                        <EditText
                            android:id="@+id/enrol_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/word_title"
                            android:maxLength="10"
                            android:maxLines="1"
                            android:padding="15dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#757778" />

                        <EditText
                            android:id="@+id/enrol_aim"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="1dp"
                            android:background="@null"
                            android:gravity="top"
                            android:hint="@string/word_aim"
                            android:minHeight="130dp"
                            android:padding="15dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="#757778" />

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/word_cert"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/activity_enrol_photo_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/enrol_demo_border_normal"
                    android:onClick="onClicked"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_plus" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:paddingEnd="10dp"
                        android:paddingStart="0dp"
                        android:text="@string/word_enrol_picture" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/certificate_photo_image"
                    android:layout_width="120dp"
                    android:layout_height="120dp" />

            </LinearLayout>


        </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_gravity="top"
            android:background="@drawable/layout_top_shadow" />

    </FrameLayout>

    <Button
        android:id="@+id/send_demo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#8ac81e"
        android:gravity="center"
        android:onClick="onClicked"
        android:text="@string/word_send"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textStyle="bold">

    </Button>

</LinearLayout>
