<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nvView"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/default_background">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="?android:listDivider"
                android:dividerPadding="2.5dp"
                android:orientation="vertical"
                android:showDividers="middle|end">

                <LinearLayout
                    android:id="@+id/about_seoulsiwi"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@drawable/seoulsiwi_background"
                    android:gravity="center_vertical"
                    android:onClick="onClickSlideMenu"
                    android:orientation="vertical"
                    android:paddingEnd="0dp"
                    android:paddingStart="30dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_description"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_seoulsiwi"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/about_demo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:onClick="onClickSlideMenu"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:padding="2dp"
                        android:src="@drawable/noti" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_demo"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/slide_menu_text_color"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/promotion_demo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:onClick="onClickSlideMenu"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:padding="2dp"
                        android:src="@drawable/write" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/promotion_demo"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/slide_menu_text_color"
                        android:textStyle="bold" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:onClick="onClickSlideMenu"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:padding="2dp"
                        android:src="@drawable/setting" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/setting"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/slide_menu_text_color"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>


        <ImageView
            android:id="@+id/btn_navigation_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end|top"
            android:layout_margin="10dp"
            android:onClick="onClickSlideMenu"
            android:padding="5dp"
            android:src="@drawable/x_black" />

    </FrameLayout>
</android.support.design.widget.NavigationView>