<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="appcontest.seoulsi_we.activity.AboutDemoActivity">

    <include
        layout="@layout/toolbar_navigation_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/activity_about_demo_how_to_report_view"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:background="@drawable/border_normal"
                android:onClick="onClickedView">

                <ImageView
                    android:id="@+id/activity_about_demo_how_to_report_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/how_to_report" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|end"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/how_to_report"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:src="@drawable/arrow" />

                </LinearLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/activity_about_demo_notice_view"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_normal"
                android:onClick="onClickedView">

                <ImageView
                    android:id="@+id/activity_about_demo_notice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/demo_notice" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|end"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/demo_notice"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:src="@drawable/arrow" />

                </LinearLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/activity_about_demo_rule_view"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_normal"
                android:onClick="onClickedView">

                <ImageView
                    android:id="@+id/activity_about_demo_rule"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/rules" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|end"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/demo_rule"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:src="@drawable/arrow" />

                </LinearLayout>

            </FrameLayout>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_gravity="top"
            android:background="@drawable/layout_top_shadow" />


    </FrameLayout>


</LinearLayout>
